src/test/rustdoc-ui/intra-links-warning-crlf.stderr
ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Shortcut
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning-crlf.rs:8:6
   |
LL | /// [error]
   |      ^^^^^ unresolved intra-doc link
   |
   = note: #[warn(intra_doc_link_resolution_failure)] on by default
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL | /// \[error\]
   |     ^^     ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error1: Shortcut
warning: cannot resolve `error1` as a path to an item or module
  --> $DIR/intra-links-warning-crlf.rs:12:11
   |
LL | /// docs [error1]
   |           ^^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL | /// docs \[error1\]
   |          ^^      ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error2: Shortcut
warning: cannot resolve `error2` as a path to an item or module
  --> $DIR/intra-links-warning-crlf.rs:14:11
   |
LL | /// docs [error2]
   |           ^^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL | /// docs \[error2\]
   |          ^^      ^^

ERROR 2019-07-13T14:46:18Z: rustdoc::passes::collect_intra_doc_links: error: Shortcut
warning: cannot resolve `error` as a path to an item or module
  --> $DIR/intra-links-warning-crlf.rs:21:20
   |
LL |  * It also has an [error].
   |                    ^^^^^ unresolved intra-doc link
   |
   = help: to escape `[` and `]` characters, just add '\' before them like `\[` or `\]`
help: escape the brackets if this is not a link
   |
LL |  * It also has an \[error\].
   |                   ^^     ^^

